SLI-2061 Fix waiting for analysis finishing